--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,45 @@
-#boards {
-    background-color: green;
+body {
+    color: #c8d6e5;
+    background-color: rgba(7,5,12,0.92);
+
+}
+
+.container {
+    background-color: #222f3e;
+    margin-top: 10px;
+    padding: 15px 30px 15px 30px;
+    border-radius: 10px;
+}
+
+.container:hover {
+    background-color: rgba(41,55,74,0.92);
+}
+
+.col {
+    background-color: #576574;
+    margin: 5px 5px;
+    min-height: 120px;
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 50px;
+    border-width: 1px;
+    border-color: black;
+}
+
+.col:hover {
+    background-color: rgba(83,98,112,0.92);
+}
+
+.card {
+    background-color: #c8d6e5;
+    color: rgba(7,5,12,0.92);
+    margin: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    border-width: 1px;
+    border-color: black;
+}
+
+.card:hover {
+    background-color: rgba(192,206,221,0.92);
 }
