--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,9 @@
 body {
     color: #e1ebf7;
     background-color: rgba(7,5,12,0.92);
-
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
 
 .container {
@@ -9,6 +11,7 @@ body {
     margin-top: 10px;
     padding: 15px 30px 15px 30px;
     border-radius: 10px;
+    text-align: left;
 }
 
 .container:hover {
@@ -24,6 +27,7 @@ body {
     padding-bottom: 50px;
     border-width: 1px;
     border-color: black;
+    text-align: center;
 }
 
 .col:hover {
@@ -38,6 +42,7 @@ body {
     border-radius: 10px;
     border-width: 1px;
     border-color: black;
+    text-align: left;
 }
 
 .card:hover {
