--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,13 +50,15 @@ body {
 }
 
 .delete {
-    vertical-align: middle;
-    text-align: center;
-    font-size: xx-large;
+    position: relative;
 }
 
-.fa-trash-alt {
-    position: relative;
-    top: 43%;
-    vertical-align: middle;
+.fas {
+    font-size: xx-large;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -8% 0 0 -25%;
 }
