--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,7 @@ body {
     position: relative;
 }
 
-.fa-trash-alt {
+.cardDelete {
     font-size: xx-large;
     position: absolute;
     top: 50%;
@@ -73,4 +73,8 @@ body {
 
 .cardtext {
     float: left;
+}
+
+.boardDelete {
+    float: right;
 }
