--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,7 +66,7 @@ body {
     margin: -8% 0 0 -25%;
 }
 
-.fa-edit {
+.cardEdit {
     float: right;
     cursor: pointer;
 }
@@ -75,6 +75,19 @@ body {
     float: left;
 }
 
+.boardEdit {
+    float: right;
+    margin-right: 8px;
+    cursor: pointer;
+}
+
 .boardDelete {
     float: right;
+    cursor: pointer;
+}
+
+.dropBtn {
+    float: right;
+    cursor: pointer;
+    margin-right: 10px;
 }
