--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,3 +62,12 @@ body {
     width: 50%;
     margin: -8% 0 0 -25%;
 }
+
+h1 {
+    margin-bottom: 20px;
+}
+
+#navi-tab {
+    margin: auto;
+    width: 300px;
+}
