--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
     <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
 </head>
 <body>
-    <h1>ProMan</h1>
+    <h1>ProMan</h1>{% if session %}<div id="logout" class="float-right"><form action="{{ url_for('logout') }}"><button type="submit" class="btn btn-danger">Logout</button></form></div>{% endif %}
     {% block content %} {% endblock %}
 </body>
 </html>
